# telegram-channel-reposter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Debug.bat  IMPROVEMENTS.md  Install.bat  LICENSE  Launch.bat  README.md  package.json  pytest.ini  Запуск.bat  Установка.bat
.github/: PULL_REQUEST_TEMPLATE.md
docs/: api-reference.md  architecture.md  development.md
scripts/: build_portable.ps1  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/locales/: en.json  ru.json  zh.json
src-tauri/scripts/: export_types.rs
src-tauri/src/: lib.rs  tests.rs
src-tauri/src/commands/: downloader.rs  health.rs  license.rs  logs.rs  mod.rs  modules.rs  settings.rs  system.rs  theme.rs  translations.rs  window.rs  window_settings.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/chat/: handlers.rs  mod.rs  models.rs  service.rs
src-tauri/src/domain/downloads/: mod.rs  service.rs
src-tauri/src/domain/license/: mod.rs  models.rs  storage.rs  types.rs  verifier.rs
src-tauri/src/domain/logs/: mod.rs  service.rs
src-tauri/src/domain/modules/: mod.rs  models.rs  service.rs
src-tauri/src/domain/monitoring/: health.rs  mod.rs  models.rs  service.rs
src-tauri/src/domain/ports/: ai.rs  storage.rs
src-tauri/src/domain/settings/: mod.rs  service.rs  translations.rs  window.rs
src-tauri/src/infra/: ai_python.rs  mod.rs  sqlite.rs
src-tauri/src/models/: modules.rs  settings.rs  system.rs
src-tauri/src/services/: chat.rs  mod.rs  module_controller.rs  settings.rs  system_monitor.rs  theme.rs  translations.rs  window_settings.rs
src-tauri/src/utils/: mod.rs  process.rs  windows.rs
(+158 files in other folders)
