[package]
name = "flux-platform"
version = "0.0.10"
description = "Flux Platform"
authors = ["F0RLE"]
edition = "2021"

[lib]
name = "flux_platform_lib"
path = "src/lib.rs"

[[bin]]
name = "export-types"
path = "src/bin/export_types.rs"

[dependencies]
tauri = { version = "2.1.0", features = ["image-ico", "image-png", "tray-icon"] }
tauri-plugin-shell = "2.1.0"
tauri-plugin-notification = "2.1.0"
tauri-plugin-global-shortcut = "2.1.0"
tauri-plugin-dialog = "2.1.0"
tauri-plugin-single-instance = "2.1.0"
tauri-plugin-deep-link = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
windows-sys = { version = "0.52", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Globalization"] }
dirs = "5.0"
once_cell = "1.19"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"
indexmap = { version = "1.9", features = ["std", "serde-1", "serde"] }
nvml-wrapper = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }
specta = { version = "2.0.0-rc.20", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }
indexmap = { version = "1.9", features = ["std", "serde-1"] }
